# b-scope-r

./: .gitignore  market_bloodscope.py  paint_blood_circle_coverage.py  paint_blood_composite.py  paint_blood_paintkits.py  paint_blood_uv.py  paintkit_groups.txt
rust_bloodscope/: Cargo.toml  README.md
rust_bloodscope/src/: gpu.rs  main.rs  shader.wgsl
tools/: extract_assets.py  gen_blood_paintkits.py  gen_paintkit_groups.py  make_scope_reference.py  package-lock.json  package.json  resolve_seeds.js
