[package]
name    = "bloodscope"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }
clap  = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
overflow-checks = false
debug-assertions = false
